# SVG-Image-Gen

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SVG-Image-Gen.py  TODO.md  config.example.env  pyproject.toml  requirements-dev.txt  requirements.txt
ontologies/: README.md  data_models.md  functional_dependencies.md  package_dependencies.md  project_architecture.md  requirements.txt  system_components.md
scripts/: fix-missing-type-stubs.py  todo_manager.py
src/svg_image_generator/: __init__.py
tests/: __init__.py  conftest.py  test_authentication.py
